fix(keymap): Hide horizontal scrollbar
close #391

--- a/packages/uhk-web/src/styles.scss
+++ b/packages/uhk-web/src/styles.scss
@@ -14,6 +14,7 @@
 
 .main-page-content {
     margin-left: 250px;
+    overflow-x: hidden;
 }
 
 .select2 {
